--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -209,8 +209,9 @@
                     <strong>Why am I seeing this?</strong> These options are displayed on some Beta builds to help test these versions.
                 </p>
 		
-		<a id="reset" class="warning" onclick="schedule_resetAll();"><i class="fa-solid fa-trash"></i> Reset Schedule</a>
-		<a id="reset" class="warning" onclick="eraseCookie('cookiesAccepted');"><i class="fa-solid fa-trash"></i> Revoke Cookie Consent</a>
+		<a class="warning" onclick="schedule_resetAll();"><i class="fa-solid fa-trash"></i> Reset Schedule</a>
+		<a class="warning" onclick="eraseCookie('cookiesAccepted');"><i class="fa-solid fa-trash"></i> Revoke Cookie Consent</a>
+		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
 
 		</div>
 
