--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -206,7 +206,7 @@
 		<div id="debugoptions" style="display:none;">
 			<h1>Debug Options</h1>
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
-                    <strong>Why am I seeing this?</strong> These options are displayed on some Beta builds to help test these versions.
+                    <strong>IF YOU OPENED THIS MENU BY ACCIDENT</strong> PLEASE RELOAD THE PAGE
                 </p>
 		
 		<a class="warning" onclick="schedule_resetAll();"><i class="fa-solid fa-trash"></i> Reset Schedule</a>
