--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -212,6 +212,7 @@
 		<a class="warning" onclick="schedule_resetAll();"><i class="fa-solid fa-trash"></i> Reset Schedule</a>
 		<a class="warning" onclick="eraseCookie('cookiesAccepted');"><i class="fa-solid fa-trash"></i> Revoke Cookie Consent</a>
 		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
+		<a href="http://michaeldors.github.io/mcacountdown/Information/testing.countdown">Download Testing Dashboard Save</a>
 
 		</div>
 
