--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -71,8 +71,8 @@
 
     <div class="backgroundframe" id="animatedbackground">
         <div class="backgroundframe-bg">
-            <img class="bg-color album-artwork" id="bg1" src="enhancedbackground_1.png" />
-            <img class="bg-black album-artwork" id="bg2" src="enhancedbackground_1.png" />
+            <img class="bg-color album-artwork" id="bg1" src="Backgrounds/enhancedbackground_1.png" />
+            <img class="bg-black album-artwork" id="bg2" src="Backgrounds/enhancedbackground_1.png" />
         </div>
     </div>
 
