--- a/404.html
+++ b/404.html
@@ -143,7 +143,7 @@ document.head.appendChild(script);
 </style>
 <script>
 
-    if(document.URL.includes("mcachristmas") || document.URL.includes("highschool") || document.URL.includes("middleschool") || document.URL.includes("wiffdle") || document.URL.includes("nebula") || document.URL.includes("christmas")){
+    if(document.URL.includes("mcachristmas") || document.URL.includes("highschool") || document.URL.includes("middleschool") || document.URL.includes("wiffdle") || document.URL.includes("nebula") || document.URL.includes("christmas") || document.URL.includes("schedulesbetav0b") || document.URL.includes("closedbeta_integratedschedule") || document.URL.includes("betatimer_light")){
         document.getElementById("addedcontext").innerHTML = "You just missed it- this page or a related one was live but has been archived. If you would like more information and possibly the contents of said webpage, please contact us at " + document.getElementById("addedcontext").innerHTML + ". Thank you for your patience.";
         document.getElementById("addedcontextlink").innerHTML = "contact@michaeldors.com";
         document.getElementById("randomarea").remove();
