--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -440,7 +440,8 @@
                             <label for="schedule-endTime">to</label>
                             <input type="time" id="schedule-endTime" style="margin-left:10px;" required>
                         </div>
-                        <a id="schedule-addOrUpdateEventBtn"><i class="fa-solid fa-plus-circle"></i> Add Event</a>
+                        <a id="schedule-addOrUpdateEventBtn"><i class="fa-solid fa-plus-circle"></i> Add to Regular Schedule</a>
+			<a href="#exceptiondaycontainer"><i class="fa-solid fa-calendar-day"></i> Add to Exception</a>
                         <br>
                         <br>
                         <br>
@@ -453,7 +454,7 @@
                             </div>
                         </div>
 
-                        <div class="schedule-editor-section">
+                        <div class="schedule-editor-section" id="exceptiondaycontainer">
                             <h2 style="font-family: 'Dosis';">Exception Days</h2>
                             <div class="schedule-form-group">
                                 <label for="schedule-exceptionDay">Add Exception Day:</label>
