--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -203,7 +203,6 @@
                 <a title="Get a shareable link or QR code" id="sharebuttonoptions" href="#linkoptions"><i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
 		<!--<a title="Countdown Dashboard" id="dashboardbuttonoptions" href="https://michaeldors.com/mcacountdown/countdowndashboard"><i class="fa-solid fa-border-all"></i> Dashboard</a>-->
                 <a title="Save to Countdown Dashboard" id="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
-                <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
 
 		<div id="debugoptions" style="display:none;">
 			<h1>Debug Options</h1>
@@ -566,6 +565,9 @@
     <br>
     <br>
     <br>
+	<h1>Danger Zone</h1>
+	<h1 class="textelement">Resetting all options will restore Countdown to a point where no trace of your interaction is left. All cookies will be removed, your Dashboard reset.</h1>
+        <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
     <br>
     <br>
     <br>
