--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -566,7 +566,7 @@
     <br>
     <br>
 	<h1>Danger Zone</h1>
-	<h1 class="textelement">Resetting all options will restore Countdown to a point where no trace of your interaction is left. All cookies will be removed, your Dashboard reset.</h1>
+	<h2 class="textelement" style="font-family: 'Dosis';">Resetting all options will restore Countdown to a point where no trace of your interaction is left. All cookies will be removed, your Dashboard reset.</h2>
         <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
     <br>
     <br>
