--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -380,7 +380,7 @@
 		</div>
                 <h1 id="scheduleoptions">Countdown Schedule <span class="betatag">NEW</span></h1>
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Creating a Countdown Schedule will irreversibly convert this Countdown to schedule mode.</p>
-                <div class="schedule-editor" style="color: white !important;">
+                <div class="schedule-editor" style="color: white !important; display:none !important;">
                     <div class="schedule-container">
                         <h2 style="font-family: 'Dosis';">Edit Schedule</h2>
                         <div class="schedule-form-group">
