--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -410,7 +410,7 @@
                     <input class="input" type="text" id="audioLink" onblur="SetCountDowngeneral();" placeholder="Audio link">
                 </div>
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
-                    Enter a <i class="fa-brands fa-youtube"></i> YouTube, <i class="fa-brands fa-soundcloud"></i> SoundCloud, or <i class="fa-solid fa-file-audio"></i> audio file link to play when the Countdown ends.
+                    Enter a <i class="fa-brands fa-youtube"></i> YouTube, <i class="fa-brands fa-soundcloud"></i> SoundCloud, or <i class="fa-solid fa-file-audio"></i> audio file link to play on ending.
                     <br />
                     Any ADs that may be placed by the service will remain.
                 </p>
