--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -27,6 +27,7 @@
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 
 	<link rel="stylesheet" href="betastyle.css"/>
+    <style id="animationHandler"></style>
 
     <meta property="og:image" content="https://michaeldors.com/mcacountdown/sharepanels/defaultshare.jpg" />
     <meta property="og:title" content="Countdown - Michael Dors" />
@@ -410,7 +411,7 @@
                     <input class="input" type="text" id="audioLink" onblur="SetCountDowngeneral();" placeholder="Audio link">
                 </div>
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
-                    Enter a <i class="fa-brands fa-youtube"></i> YouTube, <i class="fa-brands fa-soundcloud"></i> SoundCloud, or <i class="fa-solid fa-file-audio"></i> audio file link to play on ending.
+                    Enter a <i class="fa-brands fa-youtube"></i> YouTube, <i class="fa-brands fa-soundcloud"></i> SoundCloud, or <i class="fa-solid fa-file-audio"></i> audio file link to play when the Countdown ends.
                     <br />
                     Any ADs that may be placed by the service will remain.
                 </p>
