Upgraded limit to 8 color pickers
Up from 4

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -321,24 +321,25 @@
                 <br>
 
                 <h2 class="textelement" style="font-family: 'Dosis';">
-                    Foreground Colors <span class="betatag">BEING UPDATED</span>
+                    Foreground Colors
                 </h2>
 
 
                 <div id="colorPickersContainer">
                     <div class="colorpicker-container">
-                        <input class="colorpicker" id="color1" type="color" value="#8426ff" onblur="SetCountDowngeneral();" />
+                        <input class="colorpicker" id="color1" type="color" value="#8426ff" onblur="SetCountDowngeneral();"/>
+                        <div class="remove-button" style="opacity:0 !important" onclick="removeColorPicker(this)">-</div>
                     </div>
                     <div class="colorpicker-container">
-                        <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onblur="SetCountDowngeneral();" />
+                        <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onblur="SetCountDowngeneral();"/>
                         <div class="remove-button" onclick="removeColorPicker(this)">-</div>
                     </div>
                     <div class="colorpicker-container">
-                        <input class="colorpicker" id="color3" type="color" value="#00df52" onblur="SetCountDowngeneral();" />
+                        <input class="colorpicker" id="color3" type="color" value="#00df52" onblur="SetCountDowngeneral();"/>
                         <div class="remove-button" onclick="removeColorPicker(this)">-</div>
                     </div>
                     <div class="colorpicker-container">
-                        <input class="colorpicker" id="color4" type="color" value="#ff9900" onblur="SetCountDowngeneral();" />
+                        <input class="colorpicker" id="color4" type="color" value="#ff9900" onblur="SetCountDowngeneral();"/>
                         <div class="remove-button" onclick="removeColorPicker(this)">-</div>
                     </div>
                 </div>
