--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -357,7 +357,7 @@
                 <h2 class="textelement" style="font-family: 'Dosis';">
                     Background
                 </h2>
-
+                <div id="backgroundpickercontainer">
                 <a class="aintext backgroundpicker bgbtnn" id="bgbtn1" onmouseup="setbg('1', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_1.png"></div></a>
                 <a class="aintext backgroundpicker bgbtnn" id="bgbtn2" onmouseup="setbg('2', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_2.png"></div></a>
                 <a class="aintext backgroundpicker bgbtnn" id="bgbtn3" onmouseup="setbg('3', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_3.png"></div></a>
@@ -372,6 +372,7 @@
                 <a class="aintext backgroundpicker bgbtnn" id="bgbtn10" onmouseup="setbg('10', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_10.png"></div></a>
                 <a class="aintext backgroundpicker bgbtnn" id="bgbtn11" onmouseup="setbg('11', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_11.png"></div></a>
                 <a class="aintext backgroundpicker bgbtnn" id="bgbtn12" onmouseup="setbg('12', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_12.png"></div></a>
+                </div>
                 <br />
                 <br />
                 <br>
