--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -227,6 +227,8 @@
 		<a class="warning" onclick="eraseCookie('cookiesAccepted');"><i class="fa-solid fa-trash"></i> Revoke Cookie Consent</a>
 		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
         <a onclick="updateSaveButtonText()">Update Dynamic Save Button</a>
+        <a onclick="SetCountDowngeneral()">scdg</a>
+        <a onclick="autopilotsparkle()">sparkle</a>
 		<a href="http://michaeldors.github.io/mcacountdown/Information/testing.countdown">Download Testing Dashboard Save</a>
 
 		</div>
